syntax = "proto3";

package vorpal.package.v0;

service PackageService {
    rpc Make (stream PackageMakeRequest) returns (stream PackageMakeResponse);
}

message PackageMakeSource {
    bytes data = 1;
    string hash = 2;
    string name = 3;
    string signature = 4;
}

message PackageMakeRequest {
    PackageMakeSource source = 1;
    string build_script = 2;
}

message PackageMakeResponse {
    bytes data = 1;
    string log = 2;
}
